--- a/index.html
+++ b/index.html
@@ -17,38 +17,36 @@
   <link rel="stylesheet" href="css/main.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/css/tempusdominus-bootstrap-4.min.css" />
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-  crossorigin="anonymous"></script>
 </head>
 
 <body>
   <!--[if lte IE 9]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
+    <![endif]-->
 
-  <div class="container-fluid">
-    <div class="row header">
-      <div class="col-md-12">
-        <img src="img/logo_MMC_neg_groot.28.jpg" alt="MMC Logo" height="100px">
+    <div class="container">
+      <div class="row header">
+        <div class="col-md-12">
+          <img src="img/logo_MMC_neg_groot.28.jpg" alt="MMC Logo" height="100px">
+        </div>
       </div>
-    </div>
-    <div class="row d-flex justify-content-center">
-      <div class="col-md-8 m-1 p-2 white">
-        <h1>Aanvraag gewone rit MMC Leuven</h1>
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-11 m-2 p-5 main-form">
+          <h1>Aanvraag gewone rit MMC Leuven</h1>
         <p>Met dit formulier kan u een rit aanvragen. Hou er rekening mee de rit tenminste 2 WERKDAGEN op voorhand aan
           te vragen.
           Voorbeeld: een rit voor maandag kan online aangevraagd worden tot de donderdag voordien VOOR 13.30 uur.
           Items met een rood sterretje (<span class="red">*</span>) zijn verplicht in te vullen.</p>
-        <form>
-          <div class="form-group">
-            <div class="row">
-              <div class="col-md-3">
-                <label for="lidNummer">Lidnummer <span class="red">*</span></label>
+          <form>
+            <div class="form-group">
+              <div class="row">
+                <div class="col-md-3">
+                  <label for="lidNummer">Lidnummer <span class="red">*</span></label>
               </div>
               <div class="col-md-3">
                 <input type="text" class="form-control" id="lidNummer" aria-describedby="lidNummer" placeholder="Lidnummer"
                   required>
-              </div>
+                </div>
             </div>
           </div>
           <div class="form-group">
@@ -96,128 +94,116 @@
           </div>
 
           <div class="form-group">
-              <div class="row">
-                <div class="col-md-3">
-                  <label for="begeleider">Begeleider</label>
-                </div>
-                <div class="col-md-3">
-                  <input type="text" class="form-control" id="voornaam_begeleider" placeholder="Voornaam">
-                </div>
-                <div class="col-md-3">
-                  <input type="text" class="form-control" id="naam_begeleider" placeholder="Naam">
-                </div>
+            <div class="row">
+              <div class="col-md-3">
+                <label for="begeleider">Begeleider</label>
+              </div>
+              <div class="col-md-3">
+                <input type="text" class="form-control" id="voornaam_begeleider" placeholder="Voornaam">
+              </div>
+              <div class="col-md-3">
+                <input type="text" class="form-control" id="naam_begeleider" placeholder="Naam">
               </div>
             </div>
+          </div>
 
-            <div class="form-group">
-                <div class="row">
-                  <div class="col-md-3">
-                    <label for="email">GSM / Telefoon begeleider</label>
-                  </div>
-                  <div class="col-md-2">
-                    <input type="text" class="form-control" id="zone" aria-describedby="zonenr" placeholder="011">
-                    <small id="telHelp" class="form-text text-muted">Zone nr</small>
-                  </div>/
-                  <div class="col-md-4">
-                    <input type="text" class="form-control" id="tel" aria-describedby="tel" placeholder="121212">
-                    <small id="telHelp" class="form-text text-muted">Nummer</small>
-                  </div>
-                </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-3">
+                <label for="email">GSM / Telefoon begeleider</label>
               </div>
-
-            <div class="form-group">
-              <div class="row">
-                <div class="col-md-3">
-                  <label for="type_rit">Type rit <span class="red">*</span></label>
-                </div>
-                <div class="col-md-8">
-                  <select class="form-control" required>
-                      <option value=""></option>
-                      <option>Enkele rit</option>
-                      <option>Heen - en terugrit</option>
-                      <option>Heen - en terugrit op andere dag</option>
-                    </select>
-                </div>
+              <div class="col-md-2">
+                <input type="text" class="form-control" id="zone" aria-describedby="zonenr" placeholder="011">
+                <small id="telHelp" class="form-text text-muted">Zone nr</small>
+              </div>/
+              <div class="col-md-4">
+                <input type="text" class="form-control" id="tel" aria-describedby="tel" placeholder="121212">
+                <small id="telHelp" class="form-text text-muted">Nummer</small>
               </div>
             </div>
+          </div>
 
-            <div class="form-group">
-                <div class="row">
-                  <div class="col-md-3">
-                    <label for="aard_rit">Aard van de rit <span class="red">*</span></label>
-                  </div>
-                  <div class="col-md-8">
-                    <select class="form-control" required>
-                        <option value=""></option>
-                        <option value="bezoek">Bezoek</option>
-                        <option value="boodschappen">Boodschappen</option>
-                        <option value="dagcentrum">Dagcentrum</option>
-                        <option value="dokter">Dokter</option>
-                        <option value="kapsalon">Kapsalon</option>
-                      </select>
-                  </div>
-                </div>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-3">
+                <label for="type_rit">Type rit <span class="red">*</span></label>
               </div>
-
-              <div class="form-group">
-                  <div class="row">
-                    <div class="col-md-3">
-                      <label for="rollator">Rollator <span class="red">*</span></label>
-                    </div>
-                    <div class="col-md-8">
-                      <select class="form-control" required>
-                          <option value=""></option>
-                          <option value="ja">Ja</option>
-                          <option value="nee">Nee</option>
-                        </select>
-                    </div>
-                  </div>
-                </div>
-
-              <div class="form-group">
-                <div class="row">
-                  <div class="col-md-3">
-                    <label for="ophaalDatum">Datum ophaling</label>
-                  </div>
-                  <div class="col-sm-6">
-                      <div class="form-group">
-                          <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
-                              <input type="text" class="form-control datetimepicker-input" data-target="#datetimepicker1"/>
-                              <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
-                                  <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <script type="text/javascript">
-                      $(function () {
-                          document.getElementById('#datetimepicker1').datetimepicker();
-                      });
-                  </script>
-                </div>
+              <div class="col-md-8">
+                <select class="form-control" required id="type_rit">
+                  <option value=""></option>
+                  <option>Enkele rit</option>
+                  <option>Heen - en terugrit</option>
+                  <option>Heen - en terugrit op andere dag</option>
+                </select>
               </div>
+            </div>
+          </div>
 
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-3">
+                <label for="aard_rit">Aard van de rit <span class="red">*</span></label>
+              </div>
+              <div class="col-md-8">
+                <select class="form-control" id="aard_rit" required>
+                  <option value=""></option>
+                  <option value="bezoek">Bezoek</option>
+                  <option value="boodschappen">Boodschappen</option>
+                  <option value="dagcentrum">Dagcentrum</option>
+                  <option value="dokter">Dokter</option>
+                  <option value="kapsalon">Kapsalon</option>
+                </select>
+              </div>
+            </div>
+          </div>
 
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-3">
+                <label for="rollator">Rollator <span class="red">*</span></label>
+              </div>
+              <div class="col-md-8">
+                <select class="form-control" id="rollator" required>
+                  <option value=""></option>
+                  <option value="ja">Ja</option>
+                  <option value="nee">Nee</option>
+                </select>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-3">
+                <label for="ophaalDatum">Datum ophaling</label>
+              </div>
+              <div class="col-sm-3">
+                <input type="datetime-local" class="form-control" />
+              </div>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary">Rit aanvragen</button>
+        </div>
       </div>
-    </div>
-    <div class="row footer"></div>
+
+    </form>
   </div>
+  </div>
+  <div class="row footer"></div>
+</div>
 
 
 
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+crossorigin="anonymous"></script>
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/locale/af.js">
-  </script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tempusdominus-bootstrap-4/5.0.0-alpha14/js/tempusdominus-bootstrap-4.min.js"></script>
 </body>
 
 </html>
