--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   <label for="lidNummer">Lidnummer <span class="red">*</span></label>
               </div>
               <div class="col-md-3">
-                <input type="text" class="form-control" id="lidNummer" aria-describedby="lidNummer" placeholder="Lidnummer"
+                <input type="text" class="form-control form-control-sm" id="lidNummer" aria-describedby="lidNummer" placeholder="Lidnummer"
                   required>
                 </div>
             </div>
@@ -55,13 +55,13 @@
                 <label for="voornaam">Voornaam <span class="red">*</span></label>
               </div>
               <div class="col-md-3">
-                <input type="text" class="form-control" id="voornaam" placeholder="Voornaam" required>
+                <input type="text" class="form-control form-control-sm" id="voornaam" placeholder="Voornaam" required>
               </div>
               <div class="col-md-2">
                 <label for="voornaam">Naam <span class="red">*</span></label>
               </div>
               <div class="col-md-3">
-                <input type="text" class="form-control" id="naam" placeholder="Naam" required>
+                <input type="text" class="form-control form-control-sm" id="naam" placeholder="Naam" required>
               </div>
             </div>
           </div>
@@ -72,11 +72,11 @@
                 <label for="tel">GSM / Telefoon</label>
               </div>
               <div class="col-md-2">
-                <input type="text" class="form-control" id="zone" aria-describedby="zonenr" placeholder="011">
+                <input type="text" class="form-control form-control-sm" id="zone" aria-describedby="zonenr" placeholder="011">
                 <small id="telHelp" class="form-text text-muted">Zone nr</small>
               </div>/
               <div class="col-md-4">
-                <input type="text" class="form-control" id="tel" aria-describedby="tel" placeholder="121212">
+                <input type="text" class="form-control form-control-sm" id="tel" aria-describedby="tel" placeholder="121212">
                 <small id="telHelp" class="form-text text-muted">Nummer</small>
               </div>
             </div>
@@ -88,7 +88,7 @@
                 <label for="email">Email</label>
               </div>
               <div class="col-md-5">
-                <input type="email" class="form-control" id="email" aria-describedby="email" placeholder="Email">
+                <input type="email" class="form-control form-control-sm" id="email" aria-describedby="email" placeholder="Email">
               </div>
             </div>
           </div>
@@ -99,10 +99,10 @@
                 <label for="begeleider">Begeleider</label>
               </div>
               <div class="col-md-3">
-                <input type="text" class="form-control" id="voornaam_begeleider" placeholder="Voornaam">
+                <input type="text" class="form-control form-control-sm" id="voornaam_begeleider" placeholder="Voornaam">
               </div>
               <div class="col-md-3">
-                <input type="text" class="form-control" id="naam_begeleider" placeholder="Naam">
+                <input type="text" class="form-control form-control-sm" id="naam_begeleider" placeholder="Naam">
               </div>
             </div>
           </div>
@@ -113,11 +113,11 @@
                 <label for="email">GSM / Telefoon begeleider</label>
               </div>
               <div class="col-md-2">
-                <input type="text" class="form-control" id="zone" aria-describedby="zonenr" placeholder="011">
+                <input type="text" class="form-control form-control-sm" id="zone" aria-describedby="zonenr" placeholder="011">
                 <small id="telHelp" class="form-text text-muted">Zone nr</small>
               </div>/
               <div class="col-md-4">
-                <input type="text" class="form-control" id="tel" aria-describedby="tel" placeholder="121212">
+                <input type="text" class="form-control form-control-sm" id="tel" aria-describedby="tel" placeholder="121212">
                 <small id="telHelp" class="form-text text-muted">Nummer</small>
               </div>
             </div>
@@ -129,7 +129,7 @@
                 <label for="type_rit">Type rit <span class="red">*</span></label>
               </div>
               <div class="col-md-8">
-                <select class="form-control" required id="type_rit">
+                <select class="form-control form-control-sm" required id="type_rit">
                   <option value=""></option>
                   <option>Enkele rit</option>
                   <option>Heen - en terugrit</option>
@@ -177,7 +177,7 @@
               <div class="col-md-3">
                 <label for="ophaalDatum">Datum ophaling</label>
               </div>
-              <div class="col-sm-3">
+              <div class="col-sm-4">
                 <input type="datetime-local" class="form-control" />
               </div>
             </div>
