--- a/index.html
+++ b/index.html
@@ -24,29 +24,30 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
 
-    <div class="container">
-      <div class="row header">
-        <div class="col-md-12">
-          <img src="img/logo_MMC_neg_groot.28.jpg" alt="MMC Logo" height="100px">
-        </div>
+  <div class="container">
+    <div class="row header">
+      <div class="col-md-12">
+        <img src="img/logo_MMC_neg_groot.28.jpg" alt="MMC Logo" height="100px">
       </div>
-      <div class="row d-flex justify-content-center">
-        <div class="col-md-11 m-2 p-5 main-form">
-          <h1>Aanvraag gewone rit MMC Leuven</h1>
-        <p>Met dit formulier kan u een rit aanvragen. Hou er rekening mee de rit tenminste 2 WERKDAGEN op voorhand aan
+    </div>
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-11 m-2 p-5 main-form">
+        <h1 class="mb-4">Aanvraag gewone rit MMC Leuven</h1>
+        <p id="rit_info" class="mb-4">Met dit formulier kan u een rit aanvragen. Hou er rekening mee de rit tenminste 2
+          WERKDAGEN op voorhand aan
           te vragen.
           Voorbeeld: een rit voor maandag kan online aangevraagd worden tot de donderdag voordien VOOR 13.30 uur.
           Items met een rood sterretje (<span class="red">*</span>) zijn verplicht in te vullen.</p>
-          <form>
-            <div class="form-group">
-              <div class="row">
-                <div class="col-md-3">
-                  <label for="lidNummer">Lidnummer <span class="red">*</span></label>
+        <form>
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-3">
+                <label for="lidNummer">Lidnummer <span class="red">*</span></label>
               </div>
               <div class="col-md-3">
-                <input type="text" class="form-control form-control-sm" id="lidNummer" aria-describedby="lidNummer" placeholder="Lidnummer"
-                  required>
-                </div>
+                <input type="text" class="form-control form-control-sm" id="lidNummer" aria-describedby="lidNummer"
+                  placeholder="Lidnummer" required>
+              </div>
             </div>
           </div>
           <div class="form-group">
@@ -72,11 +73,11 @@
                 <label for="tel">GSM / Telefoon</label>
               </div>
               <div class="col-md-2">
-                <input type="text" class="form-control form-control-sm" id="zone" aria-describedby="zonenr" placeholder="011">
+                <input type="number" class="form-control form-control-sm" id="zone" aria-describedby="zonenr" placeholder="011">
                 <small id="telHelp" class="form-text text-muted">Zone nr</small>
               </div>/
               <div class="col-md-4">
-                <input type="text" class="form-control form-control-sm" id="tel" aria-describedby="tel" placeholder="121212">
+                <input type="number" class="form-control form-control-sm" id="tel" aria-describedby="tel" placeholder="121212">
                 <small id="telHelp" class="form-text text-muted">Nummer</small>
               </div>
             </div>
@@ -88,7 +89,8 @@
                 <label for="email">Email</label>
               </div>
               <div class="col-md-5">
-                <input type="email" class="form-control form-control-sm" id="email" aria-describedby="email" placeholder="Email">
+                <input type="email" class="form-control form-control-sm" id="email" aria-describedby="email"
+                  placeholder="Email">
               </div>
             </div>
           </div>
@@ -110,14 +112,14 @@
           <div class="form-group">
             <div class="row">
               <div class="col-md-3">
-                <label for="email">GSM / Telefoon begeleider</label>
+                <label for="tel_begeleider">GSM / Telefoon begeleider</label>
               </div>
               <div class="col-md-2">
-                <input type="text" class="form-control form-control-sm" id="zone" aria-describedby="zonenr" placeholder="011">
+                <input type="number" class="form-control form-control-sm" id="zone" aria-describedby="zonenr" placeholder="011">
                 <small id="telHelp" class="form-text text-muted">Zone nr</small>
               </div>/
               <div class="col-md-4">
-                <input type="text" class="form-control form-control-sm" id="tel" aria-describedby="tel" placeholder="121212">
+                <input type="number" class="form-control form-control-sm" id="tel" aria-describedby="tel" placeholder="121212">
                 <small id="telHelp" class="form-text text-muted">Nummer</small>
               </div>
             </div>
@@ -175,32 +177,170 @@
           <div class="form-group">
             <div class="row">
               <div class="col-md-3">
-                <label for="ophaalDatum">Datum ophaling</label>
+                <label for="ophaalDatum">Datum ophaling <span class="red">*</span></label>
               </div>
               <div class="col-sm-4">
                 <input type="datetime-local" class="form-control" />
               </div>
             </div>
           </div>
+
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-3">
+                <label for="ophaalDatum">Datum terugbrengen</label>
+              </div>
+              <div class="col-sm-4">
+                <input type="datetime-local" class="form-control" id="ophaalDatum" />
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="row">
+              <div class="col-md-3">
+                <label for="ophaalAdres">Ophaaladres <span class="red">*  </span></label>
+              </div>
+              <div class="col-sm-4">
+                <input type="text" class="form-control" id="straat" />
+                <small>Straat en huisnummer</small>
+                <input type="text" class="form-control" id="gemeente" />
+                <small>Gemeente</small>
+                <div class="row">
+                  <div class="col-sm-6">
+                    <input type="text" class="form-control" id="postcode" />
+                    <small>Postcode</small>
+                  </div>
+                  <div class="col-sm-6">
+                    <select name="land" id="land" class="form-control">
+                      <option value=""></option>
+                      <option value="Belgie">Belgie</option>
+                      <option value="Nederland">Nederland</option>
+                    </select>
+                    <small>Land</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+              <div class="row">
+                <div class="col-md-3">
+                  <label for="ophaalAdres">Bestemming <span class="red">*</span></label>
+                </div>
+                <div class="col-sm-4">
+                  <input type="text" class="form-control" id="straat_bestemming" />
+                  <small>Straat en huisnummer</small>
+                  <input type="text" class="form-control" id="gemeente_bestemming" />
+                  <small>Gemeente</small>
+                  <div class="row">
+                    <div class="col-sm-6">
+                      <input type="text" class="form-control" id="postcode_bestemming" />
+                      <small>Postcode</small>
+                    </div>
+                    <div class="col-sm-6">
+                      <select name="land_bestemming" id="land_bestemming" class="form-control">
+                        <option value=""></option>
+                        <option value="Belgie">Belgie</option>
+                        <option value="Nederland">Nederland</option>
+                      </select>
+                      <small>Land</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+                <div class="row">
+                  <div class="col-md-3">
+                    <label for="voornaam_aanvrager">Aanvrager <span class="red">*</span></label>
+                  </div>
+                  <div class="col-md-3">
+                    <input type="text" class="form-control form-control-sm" id="voornaam_aanvrager" placeholder="Voornaam">
+                  </div>
+                  <div class="col-md-3">
+                    <input type="text" class="form-control form-control-sm" id="naam_aanvrager" placeholder="Naam">
+                  </div>
+                </div>
+              </div>
+
+              <div class="form-group">
+                  <div class="row">
+                    <div class="col-md-3">
+                      <label for="tel_aanvrager">GSM / Telefoon aanvrager <span class="red">*</span></label>
+                    </div>
+                    <div class="col-md-2">
+                      <input type="number" class="form-control form-control-sm" id="zone_aanvrager" aria-describedby="zonenr" placeholder="011">
+                      <small id="telHelp" class="form-text text-muted">Zone nr</small>
+                    </div>/
+                    <div class="col-md-4">
+                      <input type="number" class="form-control form-control-sm" id="tel_aanvrager" aria-describedby="tel" placeholder="121212">
+                      <small id="telHelp" class="form-text text-muted">Nummer</small>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="row">
+                      <div class="col-md-3">
+                        <label for="adres_org">Adres van de organisatie die de aanvraag doet</label>
+                      </div>
+                      <div class="col-sm-4">
+                        <input type="text" class="form-control" id="straat_org" />
+                        <small>Straat en huisnummer</small>
+                        <input type="text" class="form-control" id="gemeente_org" />
+                        <small>Gemeente</small>
+                        <div class="row">
+                          <div class="col-sm-6">
+                            <input type="text" class="form-control" id="postcode_org" />
+                            <small>Postcode</small>
+                          </div>
+                          <div class="col-sm-6">
+                            <select name="land_bestemming" id="land_org" class="form-control">
+                              <option value=""></option>
+                              <option value="Belgie">Belgie</option>
+                              <option value="Nederland">Nederland</option>
+                            </select>
+                            <small>Land</small>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <div class="row">
+                      <div class="col-md-3">
+                        <label for="info">Aanvullende info</label>
+                      </div>
+                      <div class="col-md-8">
+                        <textarea name="info" id="info" cols="50" rows="5" class="form-control"></textarea>
+                      </div>
+                    </div>
+                  </div>
+
+
           <button type="submit" class="btn btn-primary">Rit aanvragen</button>
-        </div>
       </div>
+    </div>
 
     </form>
   </div>
   </div>
   <div class="row footer"></div>
-</div>
+  </div>
 
 
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-  crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
   <script src="js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
