--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                 <label for="tel_begeleider">GSM / Telefoon begeleider</label>
               </div>
               <div class="col-md-2">
-                <input type="number" class="form-control form-control-sm" id="zone" aria-describedby="zonenr" placeholder="011">
+                <input type="number" class="form-control form-control-sm" id="zone_begeleider" aria-describedby="zonenr" placeholder="011">
                 <small id="telHelp" class="form-text text-muted">Zone nr</small>
               </div>/
               <div class="col-md-4">
-                <input type="number" class="form-control form-control-sm" id="tel" aria-describedby="tel" placeholder="121212">
+                <input type="number" class="form-control form-control-sm" id="tel_begeleider" aria-describedby="tel" placeholder="121212">
                 <small id="telHelp" class="form-text text-muted">Nummer</small>
               </div>
             </div>
@@ -131,7 +131,7 @@
                 <label for="type_rit">Type rit <span class="red">*</span></label>
               </div>
               <div class="col-md-8">
-                <select class="form-control form-control-sm" required id="type_rit">
+                <select class="form-control form-control-sm" required id="type-rit">
                   <option value=""></option>
                   <option>Enkele rit</option>
                   <option>Heen - en terugrit</option>
@@ -147,7 +147,7 @@
                 <label for="aard_rit">Aard van de rit <span class="red">*</span></label>
               </div>
               <div class="col-md-8">
-                <select class="form-control" id="aard_rit" required>
+                <select class="form-control" id="aard-rit" required>
                   <option value=""></option>
                   <option value="bezoek">Bezoek</option>
                   <option value="boodschappen">Boodschappen</option>
