--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <div class="col-md-3">
                 <input type="text" class="form-control form-control-sm" id="voornaam" placeholder="Voornaam" required>
               </div>
-              <div class="col-md-2">
+              <div class="col-md-3">
                 <label for="voornaam">Naam <span class="red">*</span></label>
               </div>
               <div class="col-md-3">
@@ -93,12 +93,14 @@
             </div>
           </div>
 
+          <hr>
+
           <div class="form-group">
             <div class="row">
               <div class="col-md-3">
                 <label for="begeleider">Begeleider</label>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-2">
                 <input type="text" class="form-control form-control-sm" id="voornaam_begeleider" placeholder="Voornaam">
               </div>
               <div class="col-md-3">
@@ -113,13 +115,15 @@
                 <label for="tel_begeleider">GSM / Telefoon begeleider</label>
               </div>
               <div class="col-md-5">
-                <input type="number" class="form-control form-control-sm" id="zone_begeleider" aria-describedby="zonenr" placeholder="011"
+                <input type="tel" class="form-control form-control-sm" id="zone_begeleider" aria-describedby="zonenr" placeholder="011"
                   minlength="9" maxlength="11" pattern="[0-9]{2,4}-[0-9]{6,7}"
                 >
                 <small id="telHelp" class="form-text text-muted">bv. 011-121212 / 0476-985848</small>
               </div>
             </div>
           </div>
+
+          <hr>
 
           <div class="form-group">
             <div class="row">
@@ -143,7 +147,7 @@
                 <label for="aard_rit">Aard van de rit <span class="red">*</span></label>
               </div>
               <div class="col-md-8">
-                <select class="form-control" id="aard-rit" required>
+                <select class="form-control form-control-sm" id="aard-rit" required>
                   <option value=""></option>
                   <option value="bezoek">Bezoek</option>
                   <option value="boodschappen">Boodschappen</option>
@@ -161,7 +165,7 @@
                 <label for="rollator">Rollator <span class="red">*</span></label>
               </div>
               <div class="col-md-8">
-                <select class="form-control" id="rollator" required>
+                <select class="form-control form-control-sm" id="rollator" required>
                   <option value=""></option>
                   <option value="ja">Ja</option>
                   <option value="nee">Nee</option>
@@ -175,40 +179,34 @@
               <div class="col-md-3">
                 <label for="ophaalDatum">Datum ophaling <span class="red">*</span></label>
               </div>
-              <div class="col-sm-4">
-                <input type="datetime-local" class="form-control" id="datum-ophaling" />
+              <div class="col-sm-3">
+                <input type="datetime-local" class="form-control form-control-sm" id="datum-ophaling" />
               </div>
-            </div>
-          </div>
 
-          <div class="form-group">
-            <div class="row">
               <div class="col-md-3">
                 <label for="ophaalDatum">Datum terugbrengen</label>
               </div>
-              <div class="col-sm-4">
-                <input type="datetime-local" class="form-control" id="ophaalDatum" />
+              <div class="col-sm-3">
+                <input type="datetime-local" class="form-control form-control-sm" id="ophaalDatum" />
               </div>
             </div>
           </div>
 
           <div class="form-group">
             <div class="row">
-              <div class="col-md-3">
+              <div class="col-md-6">
                 <label for="ophaalAdres">Ophaaladres <span class="red">*</span></label>
-              </div>
-              <div class="col-sm-4">
-                <input type="text" class="form-control" id="straat" />
+                <input type="text" class="form-control form-control-sm" id="straat" />
                 <small>Straat en huisnummer</small>
-                <input type="text" class="form-control" id="gemeente" />
+                <input type="text" class="form-control form-control-sm" id="gemeente" />
                 <small>Gemeente</small>
                 <div class="row">
                   <div class="col-sm-6">
-                    <input type="text" class="form-control" id="postcode" />
+                    <input type="text" class="form-control form-control-sm" id="postcode" />
                     <small>Postcode</small>
                   </div>
                   <div class="col-sm-6">
-                    <select name="land" id="land" class="form-control">
+                    <select name="land" id="land" class="form-control form-control-sm">
                       <option value=""></option>
                       <option value="Belgie">Belgie</option>
                       <option value="Nederland">Nederland</option>
@@ -217,26 +215,20 @@
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
 
-          <div class="form-group">
-              <div class="row">
-                <div class="col-md-3">
+                <div class="col-md-6">
                   <label for="ophaalAdres">Bestemming <span class="red">*</span></label>
-                </div>
-                <div class="col-sm-4">
-                  <input type="text" class="form-control" id="straat_bestemming" />
+                  <input type="text" class="form-control form-control-sm" id="straat_bestemming" />
                   <small>Straat en huisnummer</small>
-                  <input type="text" class="form-control" id="gemeente_bestemming" />
+                  <input type="text" class="form-control form-control-sm" id="gemeente_bestemming" />
                   <small>Gemeente</small>
                   <div class="row">
                     <div class="col-sm-6">
-                      <input type="text" class="form-control" id="postcode_bestemming" />
+                      <input type="text" class="form-control form-control-sm" id="postcode_bestemming" />
                       <small>Postcode</small>
                     </div>
                     <div class="col-sm-6">
-                      <select name="land_bestemming" id="land_bestemming" class="form-control">
+                      <select name="land_bestemming" id="land_bestemming" class="form-control form-control-sm">
                         <option value=""></option>
                         <option value="Belgie">Belgie</option>
                         <option value="Nederland">Nederland</option>
@@ -248,12 +240,14 @@
               </div>
             </div>
 
+            <hr>
+
             <div class="form-group">
                 <div class="row">
                   <div class="col-md-3">
                     <label for="voornaam_aanvrager">Aanvrager <span class="red">*</span></label>
                   </div>
-                  <div class="col-md-3">
+                  <div class="col-md-2">
                     <input type="text" class="form-control form-control-sm" id="voornaam_aanvrager" placeholder="Voornaam" required>
                   </div>
                   <div class="col-md-3">
@@ -268,7 +262,7 @@
                       <label for="tel_aanvrager">GSM / Telefoon aanvrager <span class="red">*</span></label>
                     </div>
                     <div class="col-md-5">
-                      <input type="number" class="form-control form-control-sm" id="zone_aanvrager" aria-describedby="zonenr" placeholder="011"
+                      <input type="tel" class="form-control form-control-sm" id="zone_aanvrager" aria-describedby="zonenr" placeholder="011"
                       minlength="9" maxlength="11" pattern="[0-9]{2,4}-[0-9]{6,7}" required>
                       <small id="telHelp" class="form-text text-muted">bv. 011-121212 / 0476-985848</small>
                     </div>
@@ -281,17 +275,17 @@
                         <label for="adres_org">Adres van de organisatie die de aanvraag doet</label>
                       </div>
                       <div class="col-sm-4">
-                        <input type="text" class="form-control" id="straat_org" />
+                        <input type="text" class="form-control form-control-sm" id="straat_org" />
                         <small>Straat en huisnummer</small>
-                        <input type="text" class="form-control" id="gemeente_org" />
+                        <input type="text" class="form-control form-control-sm" id="gemeente_org" />
                         <small>Gemeente</small>
                         <div class="row">
                           <div class="col-sm-6">
-                            <input type="text" class="form-control" id="postcode_org" />
+                            <input type="text" class="form-control form-control-sm" id="postcode_org" />
                             <small>Postcode</small>
                           </div>
                           <div class="col-sm-6">
-                            <select name="land_bestemming" id="land_org" class="form-control">
+                            <select name="land_bestemming" id="land_org" class="form-control form-control-sm">
                               <option value=""></option>
                               <option value="Belgie">Belgie</option>
                               <option value="Nederland">Nederland</option>
@@ -308,8 +302,8 @@
                       <div class="col-md-3">
                         <label for="info">Aanvullende info</label>
                       </div>
-                      <div class="col-md-8">
-                        <textarea name="info" id="info" cols="50" rows="5" class="form-control"></textarea>
+                      <div class="col-md-9">
+                        <textarea name="info" id="info" cols="50" rows="5" class="form-control form-control-sm"></textarea>
                       </div>
                     </div>
                   </div>
