--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="container">
     <div class="row header">
       <div class="col-md-12">
-        <img src="img/logo_MMC_neg_groot.28.jpg" alt="MMC Logo" height="100px">
+        <img src="img/logo.jpg" alt="MMC Logo">
       </div>
     </div>
     <div class="row d-flex justify-content-center">
@@ -242,7 +242,6 @@
               </div>
           </div>
 
-
           <div style="max-width: 560px; height: 400px">
             <div id="map"></div>
           </div>
@@ -338,7 +337,11 @@
         console.log(map);
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGoOKZpGSSHICBi1uM1bzOzdxfqKPdwOg&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/distancematrix/json
+    ?origins=Beringen
+    &destinations=Hasselt
+    &client=AIzaSyBGoOKZpGSSHICBi1uM1bzOzdxfqKPdwOg
+    &signature="
     async defer></script>
 
 
