--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="container">
     <div class="row header">
       <div class="col-md-12">
-        <img src="img/logo.jpg" alt="MMC Logo">
+        <img src="img/logo.jpg" alt="MMC Logo" id="logo" class="ml-4">
       </div>
     </div>
     <div class="row d-flex justify-content-center">
