--- a/index.html
+++ b/index.html
@@ -242,7 +242,14 @@
               </div>
           </div>
 
-          <button id="btnRoute" class="btn btn-primary mb-3">Route berekenen</button> <br>
+          <div class="row mb-3">
+            <div class="col-md-5">
+              <button id="btnRoute" class="btn btn-primary">Route berekenen</button>
+            </div>
+            <div class="col-md-3">
+              <div id="aantal_km"></div>
+            </div>
+          </div>
 
           <div style="max-width: 560px; height: 400px">
             <div id="map"></div>
